fix label wrap and add new talk

--- a/src/components/app.css
+++ b/src/components/app.css
@@ -62,3 +62,21 @@ form button {
   margin: 0;
   padding: env(safe-area-inset-top) env(safe-area-inset-right) 0 env(safe-area-inset-left);
 }
+
+li.list-item {
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+
+li *:nth-child(1n) {
+  flex-basis: 58px;
+}
+
+li *:nth-child(2n) {
+  flex-basis: 80%;
+}
+
+li.list-item ul {
+  flex-basis: 100%;
+}
